added login feature

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -4,6 +4,7 @@ $primary-light: #6789a0;
 $secondary: #b8ccdc;
 $secondary-light: #dfe8f0;
 $orange: #f8a51f;
+$light-green: #36d7b7;
 
 //Sizes
 $breaking-point-xl: 1600px;
@@ -60,4 +61,5 @@ $breaking-point-xs: 330px;
   secondary: $secondary;
   secondary-light: $secondary-light;
   orange: $orange;
+  light-green: $light-green;
 }
