added register http

--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -2,4 +2,11 @@
 
 .button {
   @include button(none, white);
+  position: relative;
+  & svg {
+    position: absolute;
+    left: 1rem;
+    top: 12px;
+    color: rgba(255, 255, 255, 0.626);
+  }
 }
