--- a/src/pages/Game/game.scss
+++ b/src/pages/Game/game.scss
@@ -46,7 +46,7 @@
     transition: transform 0.5s;
     cursor: pointer;
     transition: 0.2s ease;
-    content-visibility: hidden;
+    /*  content-visibility: hidden; */
     &:hover {
       opacity: 0.8;
     }
