--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -35,6 +35,10 @@ $breaking-point-xs: 330px;
     @media (max-width: $breaking-point-xs) {
       @content;
     }
+  } @else {
+    @media (max-width: $point) {
+      @content;
+    }
   }
 }
 
