--- a/src/pages/Settings/settings.module.scss
+++ b/src/pages/Settings/settings.module.scss
@@ -3,6 +3,8 @@
 .settings {
   background-color: $primary;
   min-height: 100vh;
+  max-width: 900px;
+  margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
